# Task1

./: .gitignore  CMakeLists.txt  main.cpp  pom.xml
.github/workflows/: cmake-multi-platform.yml
sgpsdp/: CMakeLists.txt
src/main/java/com/example/task1/: Task1Application.java
src/main/java/com/example/task1/controllers/: InterfaceController.java
src/main/java/com/example/task1/tools/: Filters.java
